# fast_marching_square

./: .gitignore  LICENSE  README.md  changelog.md  pyproject.toml  requirements.txt
docs/: conf.py  requirements.txt
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/doctrees/src/: api_reference.doctree  examples.doctree  installation.doctree
docs/_build/doctrees/src/modules/: fm2.doctree  fm2_info.doctree  fm2_map.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
docs/_build/html/_sources/src/: api_reference.rst.txt
docs/_build/html/_sources/src/modules/: fm2.rst.txt
docs/_build/html/src/: api_reference.html  examples.html  installation.html
docs/_build/html/src/modules/: fm2.html  fm2_info.html  fm2_map.html
docs/src/: examples.rst  installation.rst
docs/src/modules/: fm2_info.rst  fm2_map.rst
fm2/: __init__.py  fm2.py
fm2/entities/: __init__.py  fm2_info.py  fm2_map.py
fm2/use_cases/: __init__.py  hfm.py
tests/: main_test.py  map_test.py
